--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -10,4 +10,4 @@ jobs:
   call-workflow-from-test2:
     uses: Sandeepyadav93/test2/.github/workflows/test2.yml@main
     with:
-      username: sandyy
+      username: sandyyy
