--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -3,8 +3,9 @@
 name: CI
 
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
-    branches: [ "main" ]  
+    branches: [ "main" ]
   workflow_dispatch:
 jobs:
   call-workflow-from-test2:
