--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -11,4 +11,4 @@ jobs:
   call-workflow-from-test2:
     uses: Sandeepyadav93/test2/.github/workflows/test2.yml@main
     with:
-      username: sandyyy
+      username: sandy
