--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -4,7 +4,7 @@ name: CI
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  pull_request:
+  push:
     branches: [ "main" ]
   workflow_dispatch:
 jobs:
