--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -8,8 +8,6 @@ on:
     branches: [ "main" ]
 jobs:
   call-workflow-from-test2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: say hello
-        run: |
-          echo hello
+    uses: Sandeepyadav93/test2/.github/workflows/test2.yml@main
+    with:
+      username: sandy
